Add administrative area station search endpoint
