# src/main/java/com/petrolprice/station_search_api/station/search/infrastructure/rest/StationController.java
@@ -1,6 +1,7 @@
 package com.petrolprice.station_search_api.station.search.infrastructure.rest;
 
 import com.petrolprice.station_search_api.contract.rest.api.StationsApi;
+import com.petrolprice.station_search_api.contract.rest.model.AdministrativeAreaType;
 import com.petrolprice.station_search_api.contract.rest.model.ProductType;
 import com.petrolprice.station_search_api.contract.rest.model.StationSearchMode;
 import com.petrolprice.station_search_api.contract.rest.model.StationSearchResponse;
@@ -54,6 +55,22 @@ public class StationController implements StationsApi {
                 .build();
 
         FindStationsQuery query = queryFactory.create(parameters);
+
+        FindStationsResult result = findStationsUseCase.find(query);
+
+        return ResponseEntity.ok(responseMapper.toResponse(result));
+    }
+
+    @Override
+    public ResponseEntity<StationSearchResponse> searchStationsByAdministrativeArea(
+            AdministrativeAreaType areaType,
+            String name,
+            String countryCode,
+            Integer page,
+            Integer size,
+            ProductType productType) {
+        FindStationsQuery query = queryFactory.createAdministrativeArea(
+                areaType, name, countryCode, productType, page, size);
 
         FindStationsResult result = findStationsUseCase.find(query);
 
